# zPI

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
include/: AzWaifuEngine.h  IzWaifuCharacterPlugin.h  IzWaifuEngine.h  IzWaifuFeaturePlugin.h  IzWaifuFunctionPlugin.h  IzWaifuPluginBase.h  QTypesFormatter.h  zPIGlobals.h
src/: IzWaifuCharacterPlugin.cpp  IzWaifuFeaturePlugin.cpp
